assets/css/main.css
.scroll-to-top {
  position: fixed;
  right: 1.5rem;
  bottom: 1.5rem;
  cursor: pointer;
  width: 3rem;
  height: 3rem;
  line-height: 3rem;
  display: none;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 100;
  border-radius: 50%;
  text-align: center;
  transition: background-color 0.5s;
}

.scroll-to-top i {
  color: white;
  font-size: 1.5rem;
}

.scroll-to-top:hover {
  background-color:rgba(0, 0, 0, 0.8);
}

a {
  color: inherit;
  text-decoration: none;
}

.text-right {
  text-align: right;
}

.text-center {
  text-align: center;
}

.about, .work {
  padding-top: 1rem;
  margin-bottom: 1.5rem;
}

.section-header {
  text-align: center;
  padding: 0 2rem;
  box-sizing: border-box;
  position: relative;
}

.section-title {
  color: #000;
  font-size: 3rem;
  font-weight: normal;
  margin: 0;
}

.section-subtitle {
  color: rgba(0, 0, 0, .6);
  font-family: 'Pathway Gothic One', sans-serif;
  font-size: 1rem;
  letter-spacing: 5px;
  margin: 10px 0 0 0;
  font-weight: normal;
}

.section-desc {
  margin: 1rem auto;
  text-align: justify;
}

.container {
  max-width: 960px;
}

.fancy-button {
  border: 2px solid rgba(0, 0, 0, 0.7);
  box-sizing: border-box;
  padding: 1rem 2rem;
  text-align: center;
  font-size: 1rem;
  cursor: pointer;
  box-shadow: 0.3rem 0.6rem 0.75rem rgba(0, 0, 0, 0.4);
  transition: box-shadow 0.25s;
  outline: none;
  text-decoration: none;
  white-space: nowrap;
  letter-spacing: 0.1rem;
  font-weight: bold;
}

.fancy-button:hover {
  box-shadow: 0.15rem 0.3rem 0.3rem rgba(0, 0, 0, 0.4);
}

.fancy-button:active {
  box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.4);
}

.text-black {
  color: black;
}


.footer-info {
  display: flex;
  margin: 0 auto;
  font-size: 0.925rem;
}

.footer-info div {
  margin-top: 0.5rem;
  flex: 1;
  color: #666;
}

.footer a {
  display: block;
  margin-bottom: 0.25rem;
  color: black;
}

.footer-info .footer-title {
  font-size: 1.25rem;
  color: black;
  margin-bottom: 1rem;
  font-weight: bold;
}

.footer-copyright {
  margin: 2rem 0;
  color: #888;
}

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 2rem 3rem;
  padding: 0;
}

.contact hr {
  margin: 0 1rem;
}

@media screen and (min-width: 769px) {
  a.fancy-link {
    cursor: pointer;
    position: relative;
    overflow: hidden;
    text-decoration: none;
  }

  a.fancy-link:after {
    content: "";
    background: rgba(0, 0, 0, 0.15);
    position: absolute;
    left: 0.4rem;
    bottom: -0.2rem;
    bottom: 0;
    width: calc(100% - 0.5rem);
    height: calc(100% - 0.5rem);
    z-index: -1;
    transition: 0.35s cubic-bezier(0.25, 0.1, 0, 2.05);
  }

  a.fancy-link:hover:after, a.fancy-link.active:after {
    left: -0.125rem;
    bottom: -0.125rem;
    width: calc(100% + 0.25rem);
    height: calc(100% + 0.25rem);
  }
}

@media screen and (max-width: 992px) {
  .container {
    max-width: 720px;
  }
}

@media screen and (max-width: 768px) {
  .section-title {
    font-size: 2rem;
  }

  hr {
    margin: 1rem 2rem;
  }
  
  a.fancy-link {
    font-weight: bold;
    color: #464648;
  }
}

@media screen and (max-width: 567px) {
  .fancy-button {
    padding: 0.6rem 1.2rem;
    font-size: 0.875rem;
  }

  .footer-info {
    flex-direction: column;
  }
}

@media screen and (max-width: 359px) {
  .fancy-button {
    font-size: 0.75rem;
  }
}

